update pom plugins